// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when validating association property is missing metaEdId should have validation failures 1`] = `"Association Property AssociationName on Domain Entity DomainEntityName is missing a MetaEdId value."`;

exports[`when validating association property is missing metaEdId should have validation failures 2`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "association",
}
`;

exports[`when validating choice property is missing metaEdId should have validation failures 1`] = `"Choice Property ChoiceName on Domain Entity DomainEntityName is missing a MetaEdId value."`;

exports[`when validating choice property is missing metaEdId should have validation failures 2`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "choice",
}
`;

exports[`when validating common property is missing metaEdId should have validation failures 1`] = `"Common Property CommonName on Domain Entity DomainEntityName is missing a MetaEdId value."`;

exports[`when validating common property is missing metaEdId should have validation failures 2`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "common",
}
`;

exports[`when validating currency property is missing metaEdId should have validation failures 1`] = `"Currency Property CurrencyName on Domain Entity DomainEntityName is missing a MetaEdId value."`;

exports[`when validating currency property is missing metaEdId should have validation failures 2`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "currency",
}
`;

exports[`when validating date property is missing metaEdId should have validation failures 1`] = `"Date Property DateName on Domain Entity DomainEntityName is missing a MetaEdId value."`;

exports[`when validating date property is missing metaEdId should have validation failures: when validating date property is missing metaEdId should have validation failures -> sourceMap 1`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "date",
}
`;

exports[`when validating datetime property is missing metaEdId should have validation failures 1`] = `"Datetime Property DatetimeName on Domain Entity DomainEntityName is missing a MetaEdId value."`;

exports[`when validating datetime property is missing metaEdId should have validation failures: when validating datetime property is missing metaEdId should have validation failures -> sourceMap 1`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "datetime",
}
`;

exports[`when validating decimal property is missing metaEdId should have validation failures 1`] = `"Decimal Property DecimalName on Domain Entity DomainEntityName is missing a MetaEdId value."`;

exports[`when validating decimal property is missing metaEdId should have validation failures 2`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "decimal",
}
`;

exports[`when validating descriptor property is missing metaEdId should have validation failures 1`] = `"Descriptor Property DescriptorName on Domain Entity DomainEntityName is missing a MetaEdId value."`;

exports[`when validating descriptor property is missing metaEdId should have validation failures 2`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "descriptor",
}
`;

exports[`when validating domainEntity property is missing metaEdId should have validation failures 1`] = `"Domain Entity Property DomainEntityName on Domain Entity DomainEntityName is missing a MetaEdId value."`;

exports[`when validating domainEntity property is missing metaEdId should have validation failures 2`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "domain entity",
}
`;

exports[`when validating duration property is missing metaEdId should have validation failures 1`] = `"Duration Property DurationName on Domain Entity DomainEntityName is missing a MetaEdId value."`;

exports[`when validating duration property is missing metaEdId should have validation failures 2`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "duration",
}
`;

exports[`when validating enumeration property is missing metaEdId should have validation failures 1`] = `"Enumeration Property EnumerationName on Domain Entity DomainEntityName is missing a MetaEdId value."`;

exports[`when validating enumeration property is missing metaEdId should have validation failures 2`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "enumeration",
}
`;

exports[`when validating first domain entity property is missing metaEdId should have validation failures 1`] = `"Domain Entity Property FirstAssociationDomainEntityProperty on Association AssociationName is missing a MetaEdId value."`;

exports[`when validating first domain entity property is missing metaEdId should have validation failures 2`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "domain entity",
}
`;

exports[`when validating inline common property is missing metaEdId should have validation failures 1`] = `"Inline Common Property InlineCommonName on Domain Entity DomainEntityName is missing a MetaEdId value."`;

exports[`when validating inline common property is missing metaEdId should have validation failures 2`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "inline common",
}
`;

exports[`when validating integer property is missing metaEdId should have validation failures 1`] = `"Integer Property IntegerName on Domain Entity DomainEntityName is missing a MetaEdId value."`;

exports[`when validating integer property is missing metaEdId should have validation failures 2`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "integer",
}
`;

exports[`when validating percent property is missing metaEdId should have validation failures 1`] = `"Percent Property PercentName on Domain Entity DomainEntityName is missing a MetaEdId value."`;

exports[`when validating percent property is missing metaEdId should have validation failures 2`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "percent",
}
`;

exports[`when validating school year enumeration property is missing metaEdId should have validation failures 1`] = `"Enumeration Property SchoolYear on Domain Entity DomainEntityName is missing a MetaEdId value."`;

exports[`when validating school year enumeration property is missing metaEdId should have validation failures 2`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "enumeration",
}
`;

exports[`when validating second domain entity property is missing metaEdId should have validation failures 1`] = `"Domain Entity Property SecondAssociationDomainEntityProperty on Association AssociationName is missing a MetaEdId value."`;

exports[`when validating second domain entity property is missing metaEdId should have validation failures 2`] = `
Object {
  "column": 4,
  "line": 8,
  "tokenText": "domain entity",
}
`;

exports[`when validating shared decimal property is missing metaEdId should have validation failures 1`] = `"Shared Decimal Property SharedDecimalName on Domain Entity DomainEntityName is missing a MetaEdId value."`;

exports[`when validating shared decimal property is missing metaEdId should have validation failures 2`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "shared decimal",
}
`;

exports[`when validating shared integer property is missing metaEdId should have validation failures 1`] = `"Shared Integer Property SharedIntegerName on Domain Entity DomainEntityName is missing a MetaEdId value."`;

exports[`when validating shared integer property is missing metaEdId should have validation failures 2`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "shared integer",
}
`;

exports[`when validating shared short property is missing metaEdId should have validation failures 1`] = `"Shared Short Property SharedShortName on Domain Entity DomainEntityName is missing a MetaEdId value."`;

exports[`when validating shared short property is missing metaEdId should have validation failures 2`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "shared short",
}
`;

exports[`when validating shared string property is missing metaEdId should have validation failures 1`] = `"Shared String Property SharedStringName on Domain Entity DomainEntityName is missing a MetaEdId value."`;

exports[`when validating shared string property is missing metaEdId should have validation failures 2`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "shared string",
}
`;

exports[`when validating short property is missing metaEdId should have validation failures 1`] = `"Short Property ShortName on Domain Entity DomainEntityName is missing a MetaEdId value."`;

exports[`when validating short property is missing metaEdId should have validation failures 2`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "short",
}
`;

exports[`when validating string property is missing metaEdId should have validation failures 1`] = `"String Property StringName on Domain Entity DomainEntityName is missing a MetaEdId value."`;

exports[`when validating string property is missing metaEdId should have validation failures 2`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "string",
}
`;

exports[`when validating time property is missing metaEdId should have validation failures 1`] = `"Time Property TimeName on Domain Entity DomainEntityName is missing a MetaEdId value."`;

exports[`when validating time property is missing metaEdId should have validation failures 2`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "time",
}
`;

exports[`when validating year property is missing metaEdId should have validation failures 1`] = `"Year Property YearName on Domain Entity DomainEntityName is missing a MetaEdId value."`;

exports[`when validating year property is missing metaEdId should have validation failures 2`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "year",
}
`;
